--- a/no3/Makefile
+++ b/no3/Makefile
@@ -6,16 +6,11 @@ CFLAGS = -Wall -O -fno-builtin -fomit-frame-pointer -finhibit-size-directive \
 
 all: racket.bin
 
-racket.bin: ball.o crt.o racket.o box.o
+racket.bin: ball.o crt.o racket.o box.o score.o
 	arm-none-eabi-ld -o racket.out -T gcc.ls \
-	  crt.o ball.o racket.o box.o  ${LIBGCC}
+	  crt.o ball.o racket.o box.o score.o  ${LIBGCC}
 	arm-none-eabi-objcopy -O binary racket.out racket.bin
 
 clean:
 	rm -f *.o *.s *.out *.bin
-
-ball.o: ball.c gba.h ball.h racket.h box.h
-box.o: box.c gba.h ball.h racket.h box.h
-# main.o: ball.o racket.o
-racket.o: racket.c gba.h ball.h racket.h box.h
 
